# currency-converter

./: .gitignore  CMakeLists.txt  CurrencyConverter.cpp  CurrencyConverter.h  CurrencyConverter.py  CurrencyConverterLinux.cpp  CurrencyConverterQT.cpp  CurrencyConverterWindows.cpp  main.cpp
